# collaborative-text-editor

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md
include/: ApplicationController.hpp  CRDTCharacter.hpp  CRDTManager.hpp  CommonStructs.hpp  Cursor.hpp  CustomMessageException.hpp  EditorCallbacks.hpp  EditorContent.hpp  EditorView.hpp  EditorWindow.hpp  InputHandler.hpp  NetworkingCallbacks.hpp  SharedStructs.hpp  StringUtils.hpp  TextFileContent.hpp  UDPClient.hpp  VersionInfo.hpp  VersionVector.hpp
src/: ApplicationController.cpp  main.cpp
src/crdt/: CRDTCharacter.cpp  CRDTManager.cpp
src/editor/: Cursor.cpp  EditorCallbacks.cpp  EditorContent.cpp  EditorView.cpp  EditorWindow.cpp  InputHandler.cpp  TextFileContent.cpp
src/exceptions/: CustomMessageException.cpp
src/networking/: NetworkingCallbacks.cpp  UDPClient.cpp
src/version_vector/: VersionInfo.cpp  VersionVector.cpp
tst/: crdt_action_test.cpp  crdt_manager_test.cpp  text_file_content_test.cpp  udp_client_test.cpp  version_vector_test.cpp
tst/mock_models/: UDPClientMock.cpp
